set password workflow and various fixes
